# FoodTracker

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/v1/: activity.py  audit.py  food.py  meal.py  user.py  water.py
app/core/: background_tasks.py  dependencies.py  jwt.py  minio.py  redis.py  security.py  utils.py
app/db/: base.py  session.py
app/models/: __init__.py  activity.py  audit.py  food.py  meal.py  template.py  user.py  water.py
docker/: Dockerfile
