[project]
name = "fdt"
version = "0.1.0"
description = "food tracker api"
authors = [
    {name = "deklein",email = "AlexNobirs13@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "alembic (>=1.17.0,<2.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic[email] (>=2.12.2,<3.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "types-passlib (>=1.7.7.20250602,<2.0.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "types-redis (>=4.6.0.20241004,<5.0.0.0)",
    "minio (>=7.2.18,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
black = "^25.9.0"
ruff = "^0.14.0"
isort = "^7.0.0"
mypy = "^1.18.2"
pre-commit = "^4.3.0"

# -------------------- mypy config --------------------
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlmodel.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.models.*"
ignore_errors = true

[tool.isort]
profile = "black"
line_length = 88